# crypt4gh-rust

./: .gitignore  .rustfmt.toml  1_installation.html  404.html  5_rust_library.html  Cargo.toml  README.md  app.yaml  index.html  justfile  print.html  searchindex.js  searchindex.json
.github/workflow/: coverage.yml
.github/workflows/: main.yml  release.yml
docs/: README.md  book.toml  search-index.js  settings.html  source-files.js
docs/book/: 0_intro.html  1_installation.html  2_encryption.html  3_key_format.html  404.html  4_usage_and_examples.html  5_rust_library.html  index.html  print.html  searchindex.js  searchindex.json
docs/crypt4gh/: all.html  constant.SEGMENT_SIZE.html  fn._encrypt_segment.html  fn.decrypt.html  fn.encrypt.html  fn.encrypt_segment.html  fn.rearrange.html  fn.reencrypt.html  index.html  sidebar-items.js  struct.Keys.html
docs/crypt4gh/header/: fn.deconstruct_header_body.html  fn.deconstruct_header_info.html  fn.encrypt.html  fn.make_packet_data_edit_list.html  fn.make_packet_data_enc.html  fn.rearrange.html  fn.reencrypt.html  fn.serialize.html  index.html  sidebar-items.js  struct.HeaderInfo.html
docs/crypt4gh/keys/: fn.get_private_key.html  fn.get_public_key.html  index.html  sidebar-items.js
docs/implementors/core/clone/: trait.Clone.js
docs/implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
docs/implementors/core/fmt/: trait.Debug.js
docs/implementors/core/hash/: trait.Hash.js
docs/implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
docs/implementors/serde/de/: trait.Deserialize.js
docs/implementors/serde/ser/: trait.Serialize.js
docs/implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
docs/src/: 0_intro.md  1_installation.md  2_encryption.md  3_key_format.md  4_usage_and_examples.md  5_rust_library.md  SUMMARY.md
docs/src/crypt4gh/: header.rs.html  keys.rs.html  lib.rs.html
src/: bin.rs  cli.rs  error.rs  header.rs  keys.rs  lib.rs
tests/: README.md  edit_list_gen.rs  test_common.rs  test_edit_list.rs  test_full_file.rs  test_keygen.rs  test_keygen_length.rs  test_keys.rs  test_multiple_recipients.rs  test_segments.rs
