[package]
name = "crypt4gh"
version = "0.4.1"
authors = ["Roberto <roberto.ariosa@crg.eu>"]
edition = "2021"
license = "Apache-2.0"
description = "Encryption and decryption implementation of the Crypt4GH encryption format."
repository = "https://github.com/EGA-archive/crypt4gh-rust"
documentation = "https://docs.rs/crypt4gh"
keywords = ["crypt4gh", "genetics", "genome", "encryption", "c4gh"]
categories = ["cryptography", "encoding"]
readme = "README.md"

[lib]
name = "crypt4gh"
path = "src/lib.rs"

[[bin]]
name = "crypt4gh"
path = "src/bin.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
regex = "1.5"
rpassword = "7"
base64 = "0.21"
lazy_static = "1.4"
chacha20poly1305 = "0.10"
block-padding = "0.3"
scrypt = "0.11"
cipher = "0.4"
bcrypt-pbkdf = "0.10"
aes = "0.8"
ctr = "0.9"
block-buffer = "0.10"
aead = { version = "0.5" }
bincode = "1"
serde = { version = "1", features = ["derive"] }
log = "0.4"
pretty_env_logger = "0.5"
thiserror = "1.0"
itertools = "0.10"

[dev-dependencies]
rand = "0.8"

[profile.release]
lto = true
overflow-checks = true
